force-app/main/default/objects/Account/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <inlineHelpText>Billing state</inlineHelpText>
    <label>billing State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aassam,</fullName>
            </value>
            <value>
                <fullName>Karnataka,</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Maharashtra,</fullName>
            </value>
            <value>
                <fullName>Meghalay,</fullName>
            </value>
            <value>
                <fullName>Tamilnadu,</fullName>
            </value>
            <value>
                <fullName>Tripura,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>