force-app/main/default/objects/Account/fields/Formula_A__c.field-meta.xml
<CustomField>
    <fullName>Formula_A__c</fullName>
    <formula>Count__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>