force-app/main/default/objects/Account/fields/Formula_B__c.field-meta.xml
<CustomField>
    <fullName>Formula_B__c</fullName>
    <formula>Count__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>