force-app/main/default/objects/Account/fields/Merchant_Category_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Category_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Category Reviewed</label>
    <type>Checkbox</type>
</CustomField>